--- a/OAuthTestApp/public/styles.css
+++ b/OAuthTestApp/public/styles.css
@@ -295,65 +295,49 @@ p {
         font-size: 1rem;
     }
 }
-
-/* From Uiverse.io by cssbuttons-io */ 
-button {
- width: 150px;
- height: 50px;
- cursor: pointer;
- display: flex;
- align-items: center;
- background: red;
- border: none;
- border-radius: 5px;
- box-shadow: 1px 1px 3px rgba(0,0,0,0.15);
- background: #e62222;
+/* From Uiverse.io by krlozCJ */ 
+/* Hide the default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+  display: none;
+  color: white;
 }
 
-button, button span {
- transition: 200ms;
+.container {
+  --size: 50px;
+  width: var(--size);
+  display: block;
+  height: var(--size);
+  background-color: #191A1E;
+  border-radius: 100%;
+  cursor: pointer;
+  padding: 5px;
+  color: white;
+  box-shadow: 1.5px 1.5px 3px #0e0e0e, -1.5px -1.5px 3px rgb(95 94 94 / 25%), inset 0px 0px 0px #0e0e0e, inset 0px -0px 0px #5f5e5e;
 }
 
-button .text {
- transform: translateX(35px);
- color: white;
- font-weight: bold;
+.container .checkmark {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  box-shadow: 1.5px 1.5px 3px #0e0e0e, -1.5px -1.5px 3px rgb(95 94 94 / 25%), inset 0px 0px 0px #0e0e0e, inset 0px -0px 0px #5f5e5e;
+  transition: all ease 0.3s;
+  padding: 8px;
 }
 
-button .icon {
- position: absolute;
- border-left: 1px solid #c41b1b;
- transform: translateX(110px);
- height: 40px;
- width: 40px;
- display: flex;
- align-items: center;
- justify-content: center;
+.container .checkmark svg {
+  opacity: 0;
+  transition: all ease 0.3s;
 }
 
-button svg {
- width: 15px;
- fill: #eee;
+.container input:checked + .checkmark {
+  box-shadow: 0px 0px 0px #0e0e0e, 0px 0px 0px rgb(95 94 94 / 25%), inset 1.5px 1.5px 3px #0e0e0e, inset -1.5px -1.5px 3px #5f5e5e;
 }
 
-button:hover {
- background: #940ac3ef;
-}
-
-button:hover .text {
- color: transparent;
-}
-
-button:hover .icon {
- width: 150px;
- border-left: none;
- transform: translateX(0);
-}
-
-button:focus {
- outline: none;
-}
-
-button:active .icon svg {
- transform: scale(0.8);
+.container input:checked + .checkmark svg {
+  opacity: 1;
 }
