--- a/OAuthTestApp/public/styles.css
+++ b/OAuthTestApp/public/styles.css
@@ -173,12 +173,13 @@ p {
 }
 
 /* Google Button */
-.google-btn {
+.sign-btn {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     padding: 15px 20px;
+    margin: 15px ;
     background: linear-gradient(to left, transparent 50%, white 50%);
     background-size: 200% 100%;
     background-position: right bottom;
@@ -192,16 +193,16 @@ p {
     transition: all 0.3s ease;
 }
 
-.google-btn:hover {
-    background-color: rgb(7, 43, 149);
+.sign-btn:hover {
+    background-color: rgb(50, 7, 149);
     border-radius: 50px;
 }
 
-.google-btn:active {
+.sign-btn:active {
     transform: translateY(0);
 }
 
-.google-icon {
+.sign-icon {
     width: 24px;
     height: 24px;
     margin-right: 12px;
